--- a/src/style/services.css
+++ b/src/style/services.css
@@ -80,6 +80,13 @@ span{
 
 @media only screen and (max-width: 920px){
   .service-options{
-    padding: 1%;
+    flex-wrap: wrap;
+    font-size: 100%;
+    width: 90vw;
+  }
+  .button-container {
+    margin: auto;
+    width:70%;
+    font-size: 60%;
   }
 }
